Sun May 10 11:13:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_instance_p): new function to check if
	  the argument is an instance of DL::CFunc.

	* ext/dl/cptr.c (rb_dlptr_initialize, rb_dlptr_s_malloc): checks
	  if DL::CFunc.  [ruby-dev:38403].

	* ext/dl/lib/dl/cparser.rb (DL::CParser#parse_signature): strips
	  spaces.  based on a patch from Takashi Tamura in [ruby-dev:38398].

Sat May  9 19:23:46 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: use subsec instead of nsec.

Sat May  9 12:19:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c: 3rd arguemnt of rb_hash_foreach() is VALUE.

	* hash.c (rb_any_hash, recursive_hash): use VALUE for hash.

Sat May  9 11:14:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_catch): gets rid of issue with gcc 4.4.  a patch
	  from Alexey Froloff in [ruby-core:23398].  [ruby-core:22924]

Fri May  8 19:38:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (try_link0): removes waste dSYM directories lef
	  when debug and universal-binary are enabled.

	* lib/mkmf.rb (check_sizeof): fixed wrong recuring result for
	  intrinsic types.

Fri May  8 10:14:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, configure.in, win32/Makefile.sub (RUBY_BASE_NAME):
	  program base name.  [ruby-dev:38241]

	* configure.in (--with-soname): base name of shared library.
	  [ruby-dev:38290]

Fri May  8 10:07:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_flatten_bang): clears temporary array.

Fri May  8 02:30:14 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (SortedSet#add): Do not require each newly added
	  element to be Comparable but to respond to <=>. [ruby-dev:38371]

Thu May  7 21:42:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_rubyoptions.rb (test_indentation_check): add a test
	  for indentation check.  [ruby-dev:38382]

Thu May  7 16:40:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
