@@ -63,6 +63,8 @@ module DL
           if( block )
             arg.bind_at_call(&block)
             funcs.push(arg)
+          elsif !arg.bound?
+            raise(RuntimeError, "block must be given.")
           end
           return arg.to_i
         when String
